--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<meta property="og:image" content="./image/logo.jpg" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+	* {
+		user-select: none;
+	  }
     h1 {
       font-family: "Prompt";
       letter-spacing: 1vw;
